--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,7 @@
 version: "3.9"
 services:
   aprsc:
+    image: hemna6969/trackdirect-aprsc:latest
     build:
       context: .
       dockerfile: aprsc.dockerfile
@@ -13,6 +14,7 @@ services:
       - $PWD/config/aprsc.conf:/opt/aprsc/etc/aprsc.conf
 
   collector:
+    image: hemna6969/trackdirect-python:latest
     build:
       context: .
       dockerfile: trackdirect-python.dockerfile
@@ -23,7 +25,19 @@ services:
       - "db"
       - "aprsc"
 
+  cron:
+    image: hemna6969/trackdirect-cron:latest
+    build:
+      context: .
+      dockerfile: trackdirect-python-cron.dockerfile
+    volumes:
+      - $PWD/config/trackdirect.ini:/root/trackdirect/config/trackdirect.ini
+    command: /root/trackdirect/server/scripts/cron.sh trackdirect.ini 0
+    depends_on:
+      - "collector"
+
   websocket:
+    image: hemna6969/trackdirect-python:latest
     build:
       context: .
       dockerfile: trackdirect-python.dockerfile
@@ -31,12 +45,13 @@ services:
       - $PWD/config/trackdirect.ini:/root/trackdirect/config/trackdirect.ini
     command: /root/trackdirect/server/scripts/wsserver.sh trackdirect.ini
     ports:
-      - "9000:9000"
+      - "9001:9001"
     depends_on:
       - "db"
       - "aprsc"
 
   web:
+    image: hemna6969/trackdirect-web:latest
     build:
       context: .
       dockerfile: trackdirect-apache.dockerfile
@@ -49,6 +64,7 @@ services:
       - "db"
 
   db:
+    image: hemna6969/trackdirect-db:latest
     build:
       context: .
       dockerfile: db.dockerfile
