--- a/config/trackdirect.ini
+++ b/config/trackdirect.ini
@@ -3,10 +3,9 @@
 
 
 [website]
-
 title="APRS Track Direct"
-owner_name="Unknown"
-owner_email="no@name.com"
+owner_name="Walter A. Boring IV"
+owner_email="waboring@hemna.com"
 
 ;maptiler_key="<insert map key here if you want to activate maptiler for vector tiles>"
 ;google_key="<insert google key here if you want to activate google maps>"
@@ -25,17 +24,17 @@ coverage_percentile="95"
 
 ;; Url to the websocket server, if you use https you need to set this
 ;; If nothing is set we will try the url: ws://current-url:9000/ws
-;websocket_url="wss://ws.my-domain.com"
+websocket_url="ws://192.168.1.5:9001"
 
 
 [database]
 
 ;; Basic database settings
 ;; If using docker, set host to "db"
-host="127.0.0.1"
+host="192.168.0.105"
 database="trackdirect"
 ;; If using docker, activate username and set to "root"
-;username="username"
+username="root"
 password="foobar"
 port="5432"
 
@@ -56,10 +55,10 @@ save_ogn_stations_with_missing_identity="0"
 host="0.0.0.0"
 
 ;; Websocket server port, must be same as port specified in index.php (if not using a reverse proxy)
-port="9000"
+port="9001"
 
 ;; If you are using a reverse proxy you need to play with the "external_port" setting, otherwise it should be the same as "port"
-external_port="9000"
+external_port="9001"
 
 ;; Websocket server log output
 error_log="~/trackdirect/server/log/wsserver_aprs.log"
@@ -73,7 +72,7 @@ frequency_limit="0"
 ;; First APRS IS server for the websocket server to connect to.
 ;; Important: Please set up your own APRS IS server, do not use a public server.
 ;; If using docker, set aprs_host1 to "aprsc"
-aprs_host1="127.0.0.1"
+aprs_host1="192.168.0.101"
 aprs_port1="14580"
 
 ;; Important that you set the correct source, otherwise it might be handled incorrect
@@ -112,7 +111,8 @@ max_queued_realtime_packets="30"
 [collector0]
 
 ;; If using docker, set host to "aprsc"
-host="127.0.0.1"
+;;host="127.0.0.1"
+host="192.168.0.101"
 port_full="10152"
 port_filtered="14580"
 
@@ -125,7 +125,7 @@ port_filtered="14580"
 source_id="1"
 
 ;; Your callsign and passcode
-callsign="NOCALL"
+callsign="WB4BOR-2"
 passcode="-1"
 
 ;; Database inserts is done in batches
